add links to netlify

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
     <div>
       <a href="/events.html" title="Upcoming events for Jane Doe">Events</a>
     </div>
+    Netlify link at https://affectionate-feynman-459bba.netlify.app/ Github link
+    at
   </body>
 </html>
