Add live links to netlify and github

--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
     <div>
       <a href="/events.html" title="Upcoming events for Jane Doe">Events</a>
     </div>
-    Netlify link at https://affectionate-feynman-459bba.netlify.app/ Github link
-    at
+    Netlify link at
+    <a
+      href="https://affectionate-feynman-459bba.netlify.app/"
+      title="Link to Netlify"
+      >Netlify</a
+    >
+
+    Github link at
+    <a
+      href="https://github.com/NiliPilipp/Candidate-Website"
+      title="Link to Github"
+      >Github</a
+    >
   </body>
 </html>
