--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <a
       href="https://affectionate-feynman-459bba.netlify.app/"
       title="Link to Netlify"
+      target="_blank"
       >Netlify</a
     >
 
@@ -46,6 +47,7 @@
     <a
       href="https://github.com/NiliPilipp/Candidate-Website"
       title="Link to Github"
+      target="_blank"
       >Github</a
     >
   </body>
