--- a/events.html
+++ b/events.html
@@ -1,31 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/9591399bbb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Jane Doe's Upcoming Events</title>
-</head>
-<body>
-     Hello Events page
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Jane Doe</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html" title="About Jane Doe"
+                >Blogs</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="team.html"
+                title="Jane Doe's team members"
+                >Team</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="events.html" title="upcoming events"
+                >Events</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1>Hello Events page</h1>
     <br />
     <div>
-    <a href="/index.html" title="Homepage for Jane Doe">Home page for Jane Doe</a></div>
-    <div><a href="/blog.html" title="Blog page for Jane Doe">Jane Doe's Blog</a></div>
-    <div><a href="/team.html" title="Team member's for Jane Doe">Jane Doe's Team</a></div>
+      <a href="index.html" title="Homepage for Jane Doe"
+        >Home page for Jane Doe</a
+      >
+    </div>
+    <div>
+      <a href="blog.html" title="Blog page for Jane Doe">Jane Doe's Blog</a>
+    </div>
+    <div>
+      <a href="team.html" title="Team member's for Jane Doe">Jane Doe's Team</a>
+    </div>
     <div><a href="/" title="Upcoming events for Jane Doe">Events</a></div>
+    <footer>
+      <div>Contact Us</div>
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter"></i>
+    </footer>
   </body>
-</body>
 </html>
