--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <title>Jane Doe for local office - homepage</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
+    <div class="hero fixed-top p-3 pb-3">
+    <h1>Jane Doe's homepage</h1>
+    <h3>Help Jane Doe become your local representative in city council</h3></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mt-5">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Jane Doe</a>
-        <button
+      <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -37,59 +39,34 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="index.html"
-                title="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html" title="About Jane Doe"
-                >Blogs</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="team.html"
-                title="Jane Doe's team members"
-                >Team</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="events.html" title="upcoming events"
-                >Events</a
-              >
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active mx-5 px-5" href="index.html"  title="Homepage for Jane Doe">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link mx-5 px-5" href="blog.html" title="Jane Doe's blog">Blogs</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link mx-5 px-5" href="team.html" title="Jane Doe's team">Team</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link mx-5 px-5" href="events.html".html" title="Upcoming political events">Events</a>
+  </li>
+</ul>
         </div>
       </div>
     </nav>
-    <h1>Hello main index page</h1>
+    <h2>Welcome to my homepage</h2>
     <br />
-    <div>
-      <a href="/" title="Homepage for Jane Doe">Home page for Jane Doe</a>
-    </div>
-    <div>
-      <a href="blog.html" title="Blog page for Jane Doe">Jane Doe's Blog</a>
-    </div>
-    <div>
-      <a href="team.html" title="Team member's for Jane Doe">Jane Doe's Team</a>
-    </div>
-    <div>
-      <a href="events.html" title="Upcoming events for Jane Doe">Events</a>
-    </div>
 
     <footer>
-      <div>Contact Us</div>
-      <i class="fab fa-instagram"></i>
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-twitter"></i>
+      <div class="contact-info">
+        <h3>Contact Us</h3>
+        <i class="fab fa-instagram contact-icon"></i>
+        <i class="fab fa-facebook contact-icon"></i>
+        <i class="fab fa-twitter contact-icon"></i>
+      </div>
     </footer>
 
     Netlify link at
