--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Jane Doe</a>
+        <a class="navbar-brand" href="index.html" title="Homepage for Jane Doe">Jane Doe</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,12 +41,12 @@
                 class="nav-link active"
                 aria-current="page"
                 href="index.html"
-                title="Homepage"
+                title="Homepage for candidate Jane Doe"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html" title="About Jane Doe"
+              <a class="nav-link" href="blog.html" title="Jane Doe's blog"
                 >Blogs</a
               >
             </li>
@@ -59,7 +59,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="events.html" title="upcoming events"
+              <a class="nav-link" href="events.html" title="upcoming events for candidate Jan Doe"
                 >Events</a
               >
             </li>
@@ -69,16 +69,14 @@
     </nav>
      <h1>Hello team page</h1>
     <br />
-    <div>
-    <a href="index.html" title="Homepage for Jane Doe">Home page for Jane Doe</a></div>
-    <div><a href="blog.html" title="Blog page for Jane Doe">Jane Doe's Blog</a></div>
-    <div><a href="/" title="Team member's for Jane Doe">Jane Doe's Team</a></div>
-    <div><a href="events.html" title="Upcoming events for Jane Doe">Events</a></div>
+    
      <footer>
-      <div>Contact Us</div>
-      <i class="fab fa-instagram"></i>
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-twitter"></i>
+      <div class="contact-info">
+        <h3>Contact Us</h3>
+        <i class="fab fa-instagram contact-icon"></i>
+        <i class="fab fa-facebook contact-icon"></i>
+        <i class="fab fa-twitter contact-icon"></i>
+      </div>
     </footer>
   
   </body>
