--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
 
 <body>
+  <div class="container">
   <div class="hero fixed-top pt-3">
   <h1>Jane Doe's Homepage</h1>
   <h3>Jane Doe - Your Rep for Local City Council</h3>
@@ -59,18 +60,18 @@
     
  <div class="container">
       <div class="row justify-content-left mt-2">
-        <div class="col-8"> <img src="images/candidate.jpg" heigth="70%" width="70%" class="img-fluid rounded"></div>
+        <div class="col-8"> <img src="images/candidate.jpg" alt="candidate image" heigth="70%" width="70%" class="img-fluid rounded"></div>
           <div class="col-4">         
              <div class="row justify-content-center">
-              <a href="#" class="action-link">Donate</a>
+              <a href="#" class="action-link home">Donate</a>
             </div>
             <br/>
             <div class="row justify-content-center">
-              <a href="#" class="action-link">Volunteer</a>
+              <a href="#" class="action-link home">Volunteer</a>
             </div>
              <br/>              
             <div class="row justify-content-center">
-              <a href="#" class="action-link">Contact</a>
+              <a href="#" class="action-link home">Contact</a>
             </div>
         </div>
         <div class="homepage-content">
@@ -105,6 +106,7 @@
       target="_blank"
       >Github</a
     >
+    </div>
     </div>
   </body>
 </html>
