--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
          </p>
         </div>
         <div class="row">
-        <div class="d-flex justify-content-evenly">
+        <div class="d-flex justify-content-evenly mt-3">
           <a href="#" class="action-link blog">Donate</a>               
           <a href="#" class="action-link blog">Volunteer</a>           
           <a href="#" class="action-link blog">Contact</a>
