--- a/team.html
+++ b/team.html
@@ -86,47 +86,82 @@
         </div>
       </div>
       <h2>Meet Jane Doe's Team</h2>
-      <br />
-      <div class="container-fluid">
-        <div class="row d-flex">
-            <div class="col mb-5 p-5">
-            <div class="row">
-              <img
-                src="images/blog-pic.jpg"
-                alt="team member 1"
-                class="img-fluid rounded team-image"
-                
-              />
-            </div>
-            <div class="row team-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </div>
-            <div class="row">
-              <div class="d-flex justify-content-evenly mt-4">
-                <i class="fab fa-instagram contact-icon"></i>
-                <i class="fab fa-facebook contact-icon"></i>
-                <i class="fab fa-twitter contact-icon"></i>
-              </div>
-            </div>
-          </div>
-          <div class="col mt-5">
-            col 2
+      <div class="container"></div>
+      <div class="row mt-5 justify-content-center">
+        <div class="col-sm-6 justify-content-center">
+          <img
+            src="images/Jane-Doe.jpg"
+            class="img-fluid rounded d-none d-sm-block mb-3"
+            alt="Jane Doe"
+          />
+          <h4>Jane Doe</h4>
+          <p class="team-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quibusdam.
+          </p>
+          <div class="d-flex justify-content-evenly m-4">
+            <i class="fab fa-instagram contact-icon pl-4"></i>
+            <i class="fab fa-facebook contact-icon"></i>
+            <i class="fab fa-twitter contact-icon pl-5"></i>
           </div>
         </div>
-      
-          <div class="col mb-5">
-        <div class="row d-flex justify-content-center">
-          <div class="col">
-            col 3
-          </div>
-          <div class="col">
-            col 4
+        <div class="col-sm-6 justify-content-center">
+          <img
+            src="images/SunnyDay.jpg"
+            class="img-fluid rounded d-none d-sm-block mb-3"
+            alt="Sunny Day"
+          />
+          <h4>Sunny Day</h4>
+          <p class="team-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia.
+          </p>
+          <div class="d-flex justify-content-evenly m-4">
+            <i class="fab fa-instagram contact-icon"></i>
+            <i class="fab fa-facebook contact-icon"></i>
+            <i class="fab fa-twitter contact-icon"></i>
           </div>
         </div>
       </div>
+      <div class="row mt-5 justify-content-center">
+        <div class="col-sm-6 justify-content-center">
+          <img
+            src="images/Alice Smith.jpg"
+            class="img-fluid rounded d-none d-sm-block mb-3"
+            alt="Alice Smith"
+          />
+          <h4>Alice Smith</h4>
+          <p class="team-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quibusdam.
+          </p>
+          <div class="d-flex justify-content-evenly m-4">
+            <i class="fab fa-instagram contact-icon"></i>
+            <i class="fab fa-facebook contact-icon"></i>
+            <i class="fab fa-twitter contact-icon"></i>
+          </div>
+        </div>
+        <div class="col-sm-6 justify-content-center">
+          <img
+            src="images/Joe Rodrigez.jpg"
+            class="img-fluid rounded d-none d-sm-block mb-3"
+            alt="Joe Rodrigez"
+          />
+          <h4>Joe Rodrigez</h4>
+          <p class="team-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia.
+          </p>
+          <div class="d-flex justify-content-evenly m-4">
+            <i class="fab fa-instagram contact-icon"></i>
+            <i class="fab fa-facebook contact-icon"></i>
+            <i class="fab fa-twitter contact-icon"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+   
     </div>
   </body>
 </html>
