--- a/events.html
+++ b/events.html
@@ -20,71 +20,139 @@
       src="https://kit.fontawesome.com/9591399bbb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Jane Doe's Upcoming Events</title>
+    <title>Upcoming Events for Jane Doe campaign</title>
   </head>
+
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" title="Homepage for Jane Doe"
-          >Jane Doe</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="index.html"
-                title="Homepage for candidate Jane Doe"
-                >Home</a
+    <div class="container">
+      <div class="hero fixed-top pt-3">
+        <h1>Jane Doe's Events</h1>
+        <h3>Jane Doe - Your Rep for Local City Council</h3>
+        <div class="button-wrapper">
+          <nav class="navbar navbar-expand-lg navbar-light mt-4">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html" title="Jane Doe's blog"
-                >Blogs</a
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div
+                class="collapse navbar-collapse justify-content-center"
+                id="navbarNav"
               >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="team.html"
-                title="Jane Doe's team members"
-                >Team</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="events.html"
-                title="upcoming events for candidate Jane Doe"
-                >Events</a
-              >
-            </li>
-          </ul>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5 alt-nav-link"
+                      aria-current="page"
+                      href="index.html"
+                      title="Jane Doe's homepage"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5"
+                      href="blog.html"
+                      title="Jane Doe's blogs"
+                      >Blogs</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5 alt-nav-link"
+                      href="team.html"
+                      title="Jane Doe's campaign team"
+                      >Team</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5"
+                      href="events.html"
+                      title="Jane Does' upcoming events"
+                      >Events</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </div>
       </div>
-    </nav>
-    <h1>Hello Events page</h1>
-    <br />
+      <h2>Upcoming Events</h2>
 
-    <footer>
-      <div class="contact-info">
-        <h3>Contact Us</h3>
+      <div class="container">
+        <div class="row mt-5 event">
+          <div class="col-7 justify-content-left">
+            <h3 class="mt-2">Aug 30, 2021</h3>
+            <h5>7:30PM</h5>
+            <h1>Meet & Greet</h1>
+            <h5>Gold Rock Cafe</h5>
+          </div>
+          <div class="col-5">
+            <div class="row m-3">
+              <a href="#" class="action-link mt-1">Sign Up</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link">Volunteer</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link mb-1">Contact Us</a>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 event">
+          <div class="col-5">
+            <div class="row m-3">
+              <a href="#" class="action-link mt-1">Sign Up</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link">Volunteer</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link mb-1">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-7 justify-content-left">
+            <h3 class="mt-2">Sept 7, 2021</h3>
+            <h5>7:30PM</h5>
+            <h1>Meet & Greet</h1>
+            <h5>Gold Rock Cafe</h5>
+          </div>
+        </div>
+        <div class="row mt-5 event">
+          <div class="col-7 justify-content-left">
+            <h3 class="mt-2">Sept 14, 2021</h3>
+            <h5>7:30PM</h5>
+            <h1>Meet & Greet</h1>
+            <h5>Gold Rock Cafe</h5>
+          </div>
+          <div class="col-5">
+            <div class="row m-3">
+              <a href="#" class="action-link mt-1">Sign Up</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link">Volunteer</a>
+            </div>
+            <div class="row m-3">
+              <a href="#" class="action-link mb-1">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact-info mt-5">
+        <h5>Connect with Us</h5>
         <i class="fab fa-instagram contact-icon"></i>
         <i class="fab fa-facebook contact-icon"></i>
         <i class="fab fa-twitter contact-icon"></i>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
