fix navbar collapse

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
   <div class="hero fixed-top pt-3">
   <h1>Welcome to Jane Doe's Blog</h1>
   <h3>Jane Doe's ideas for a Better Future</h3>
-  <div class="button-wrapper">
+  <div class="navbar-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light mt-4">
   <div class="container-fluid">
    
@@ -66,7 +66,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
          
           </div>   
-        <div class="col-sm-5 blog-image d-none d-md-block"> <img src="images/blog-pic.jpg" alt="blog image" heigth="80%" width="80%" class="img-fluid rounded float-end "></div>
+        <div class="col-sm-5 blog-image d-none d-lg-block"> <img src="images/blog-pic.jpg" alt="blog image" heigth="80%" width="80%" class="img-fluid rounded float-end "></div>
         </div>
         <div class="row ">
          <p class="blog-content">
