--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
       <div class="hero fixed-top pt-3">
         <h1>Jane Doe's Events</h1>
         <h3>Jane Doe - Your Rep for Local City Council</h3>
-        <div class="button-wrapper">
+        <div class="navbar-wrapper">
           <nav class="navbar navbar-expand-lg navbar-light mt-4">
             <div class="container-fluid">
               <button
