--- a/team.html
+++ b/team.html
@@ -26,8 +26,9 @@
   <body>
     <div class="container">
       <div class="hero fixed-top pt-3">
-        <h1>This is our Team</h1>
-        <div class="button-wrapper">
+        <h1>Welcome to our Team</h1>
+        <h3>Working Together for a Better Future</h3>
+        <div class="navbar-wrapper">
           <nav class="navbar navbar-expand-lg navbar-light mt-4">
             <div class="container-fluid">
               <button
