--- a/index.html
+++ b/index.html
@@ -23,90 +23,134 @@
     <title>Jane Doe for local office - homepage</title>
   </head>
 
-<body>
-  <div class="container">
-  <div class="hero fixed-top pt-3">
-  <h1>Jane Doe's Homepage</h1>
-  <h3>Jane Doe - Your Rep for Local City Council</h3>
-  <div class="button-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light mt-4">
-  <div class="container-fluid">
-   
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link mx-5 px-5 alt-nav-link" aria-current="page" href="index.html" title="Jane Doe's homepage">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link mx-5 px-5 " href="blog.html" title="Jane Doe's blogs">Blogs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link mx-5 px-5 alt-nav-link" href="team.html" title="Jane Doe's campaign team">Team</a>
-        </li>
-       <li class="nav-item">
-          <a class="nav-link mx-5 px-5 " href="events.html" title="Jane Does' upcoming events">Events</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-</div>
-</div>
-<h2>Welcome to Jane's Online Campaign</h2>
-<br />
-    
- <div class="container">
+  <body>
+    <div class="container">
+      <div class="hero fixed-top pt-3">
+        <h1>Jane Doe's Homepage</h1>
+        <h3>Jane Doe - Your Rep for Local City Council</h3>
+        <div class="navbar-wrapper">
+          <nav class="navbar navbar-expand-lg navbar-light mt-4">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div
+                class="collapse navbar-collapse justify-content-center"
+                id="navbarNav"
+              >
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5 alt-nav-link"
+                      aria-current="page"
+                      href="index.html"
+                      title="Jane Doe's homepage"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5"
+                      href="blog.html"
+                      title="Jane Doe's blogs"
+                      >Blogs</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5 alt-nav-link"
+                      href="team.html"
+                      title="Jane Doe's campaign team"
+                      >Team</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link mx-5 px-5"
+                      href="events.html"
+                      title="Jane Does' upcoming events"
+                      >Events</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+     </div>
+    <h2>Welcome to Jane's Online Campaign</h2>
+    <br />
+
+    <div class="container">
       <div class="row justify-content-left mt-2">
-        <div class="col-8"> <img src="images/candidate.jpg" alt="candidate image" heigth="70%" width="70%" class="img-fluid rounded"></div>
-          <div class="col-4">         
-             <div class="row justify-content-center">
-              <a href="#" class="action-link home">Donate</a>
-            </div>
-            <br/>
-            <div class="row justify-content-center">
-              <a href="#" class="action-link home">Volunteer</a>
-            </div>
-             <br/>              
-            <div class="row justify-content-center">
-              <a href="#" class="action-link home">Contact</a>
-            </div>
+        <div class="col-8">
+          <img
+            src="images/candidate.jpg"
+            alt="candidate image"
+            heigth="70%"
+            width="70%"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-4">
+          <div class="row justify-content-center">
+            <a href="#" class="action-link home">Donate</a>
+          </div>
+          <br />
+          <div class="row justify-content-center">
+            <a href="#" class="action-link home">Volunteer</a>
+          </div>
+          <br />
+          <div class="row justify-content-center">
+            <a href="#" class="action-link home">Contact</a>
+          </div>
         </div>
         <div class="homepage-content">
-        <div class="row  m-4">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-        <br/>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+          <div class="row m-4">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </div>
+        </div>
       </div>
-      </div>
-       </div>
       <div class="contact-info">
         <h5>Connect with Us</h5>
         <i class="fab fa-instagram contact-icon"></i>
         <i class="fab fa-facebook contact-icon"></i>
         <i class="fab fa-twitter contact-icon"></i>
       </div>
-    
 
-    <div class="source-links">
-    Netlify link at
-    <a
-      href="https://affectionate-feynman-459bba.netlify.app/"
-      title="Link to Netlify"
-      target="_blank"
-      >Netlify</a
-    >
+      <div class="source-links">
+        Netlify link at
+        <a
+          href="https://affectionate-feynman-459bba.netlify.app/"
+          title="Link to Netlify"
+          target="_blank"
+          >Netlify</a
+        >
 
-    Github link at
-    <a
-      href="https://github.com/NiliPilipp/Candidate-Website"
-      title="Link to Github"
-      target="_blank"
-      >Github</a
-    >
-    </div>
+        Github link at
+        <a
+          href="https://github.com/NiliPilipp/Candidate-Website"
+          title="Link to Github"
+          target="_blank"
+          >Github</a
+        >
+      </div>
     </div>
   </body>
 </html>
