Tweak alignment on index and blog pages

--- a/blog.html
+++ b/blog.html
@@ -57,42 +57,62 @@
 </div>
 <h2>Today's Blog</h2>
 <br />
- <div class="container">
+ <div class="container-fluid">
       <div class="row justify-content-left">
-        <div class="col-sm-7 blog-content">
-          <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-          </p> 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-         
-          </div>   
-        <div class="col-sm-5 blog-image d-none d-lg-block"> <img src="images/blog-pic.jpg" alt="blog image" heigth="80%" width="80%" class="img-fluid rounded float-end "></div>
-        </div>
-        <div class="row ">
-         <p class="blog-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-         </p>
+        <div class="col-sm-7 mt-2">
           <p class="blog-content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+          </br>
+          </br>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+        </br>
+      </br>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+            </p> 
+          </div>   
+        <div class="col-sm-5 blog-image d-none d-md-block"> <img src="images/blog-pic.jpg" alt="blog image" heigth="80%" width="80%" class="img-fluid rounded float-end "></div>
+        </div>
+        <div class="row ">
+         <p class="blog-content bottom">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+         </br>
+        </br>          
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
          </p>
         </div>
-        <div class="row">
-        <div class="d-flex justify-content-evenly mt-3">
+        <div class="row mt-2">
+        <div class="d-flex justify-content-evenly">
           <a href="#" class="action-link blog">Donate</a>               
           <a href="#" class="action-link blog">Volunteer</a>           
           <a href="#" class="action-link blog">Contact</a>
           </div>
         </div>
         
-      <div class="contact-info">
+      <div class="contact-info mt-4">
         <h5>Connect with Us</h5>
         <i class="fab fa-instagram contact-icon"></i>
         <i class="fab fa-facebook contact-icon"></i>
         <i class="fab fa-twitter contact-icon"></i>
       </div>
-    </footer>
+    <div class="source-links">
+        Netlify link at
+        <a
+          href="https://affectionate-feynman-459bba.netlify.app/"
+          title="Link to Netlify"
+          target="_blank"
+          >Netlify</a
+        >
+
+        Github link at
+        <a
+          href="https://github.com/NiliPilipp/Candidate-Website"
+          title="Link to Github"
+          target="_blank"
+          >Github</a
+        >
+      </div>
     </div>
   </body>
 </html>
