--- a/index.html
+++ b/index.html
@@ -90,26 +90,22 @@
     <br />
 
     <div class="container">
-      <div class="row justify-content-left mt-2">
-        <div class="col-8">
+      <div class="row justify-content-left m-2">
+        <div class="col-sm-8">
           <img
             src="images/candidate.jpg"
             alt="candidate image"
-            heigth="70%"
-            width="70%"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-4">
-          <div class="row justify-content-center">
+        <div class="col-sm-4 action-link-wrapper">
+          <div class="row  action-link-row">
             <a href="#" class="action-link home">Donate</a>
-          </div>
-          <br />
-          <div class="row justify-content-center">
+          </div>        
+          <div class="row action-link-row">
             <a href="#" class="action-link home">Volunteer</a>
-          </div>
-          <br />
-          <div class="row justify-content-center">
+          </div>         
+          <div class="row action-link-row">
             <a href="#" class="action-link home">Contact</a>
           </div>
         </div>
