format content for team page

--- a/team.html
+++ b/team.html
@@ -88,11 +88,11 @@
       </div>
       <h2>Meet Jane Doe's Team</h2>
       <div class="container"></div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-sm-6 justify-content-center">
+      <div class="row justify-content-center">
+        <div class="col-sm-6 justify-content-center mt-5">
           <img
             src="images/Jane-Doe.jpg"
-            class="img-fluid rounded d-none d-sm-block mb-3"
+            class="img-fluid rounded d-sm-block mb-3"
             alt="Jane Doe"
           />
           <h4>Jane Doe</h4>
@@ -100,16 +100,16 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quibusdam.
           </p>
-          <div class="d-flex justify-content-evenly m-4">
-            <i class="fab fa-instagram contact-icon pl-4"></i>
+          <div class="d-flex m-4 justify-content-evenly">
+            <i class="fab fa-instagram contact-icon"></i>
             <i class="fab fa-facebook contact-icon"></i>
-            <i class="fab fa-twitter contact-icon pl-5"></i>
+            <i class="fab fa-twitter contact-icon"></i>
           </div>
         </div>
-        <div class="col-sm-6 justify-content-center">
+        <div class="col-sm-6 justify-content-center mt-5">
           <img
             src="images/SunnyDay.jpg"
-            class="img-fluid rounded d-none d-sm-block mb-3"
+            class="img-fluid rounded d-sm-block mb-3"
             alt="Sunny Day"
           />
           <h4>Sunny Day</h4>
@@ -124,11 +124,11 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-sm-6 justify-content-center">
+      <div class="row justify-content-center">
+        <div class="col-sm-6 justify-content-center mt-5">
           <img
             src="images/Alice Smith.jpg"
-            class="img-fluid rounded d-none d-sm-block mb-3"
+            class="img-fluid rounded d-sm-block mb-3"
             alt="Alice Smith"
           />
           <h4>Alice Smith</h4>
@@ -142,10 +142,10 @@
             <i class="fab fa-twitter contact-icon"></i>
           </div>
         </div>
-        <div class="col-sm-6 justify-content-center">
+        <div class="col-sm-6 justify-content-center mt-5">
           <img
             src="images/Joe Rodrigez.jpg"
-            class="img-fluid rounded d-none d-sm-block mb-3"
+            class="img-fluid rounded d-sm-block mb-3"
             alt="Joe Rodrigez"
           />
           <h4>Joe Rodrigez</h4>
@@ -161,7 +161,23 @@
         </div>
       </div>
     </div>
+    <div class="source-links text-center">
+        Netlify link at
+        <a
+          href="https://affectionate-feynman-459bba.netlify.app/"
+          title="Link to Netlify"
+          target="_blank"
+          >Netlify</a
+        >
 
+        Github link at
+        <a
+          href="https://github.com/NiliPilipp/Candidate-Website"
+          title="Link to Github"
+          target="_blank"
+          >Github</a
+        >
+      </div>
    
     </div>
   </body>
