--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
         </div>
       </div>
-      <div class="contact-info">
+      <div class="contact p-2">
         <h5>Connect with Us</h5>
         <i class="fab fa-instagram contact-icon"></i>
         <i class="fab fa-facebook contact-icon"></i>
