--- a/team.html
+++ b/team.html
@@ -89,79 +89,79 @@
       <h2>Meet Jane Doe's Team</h2>
       <div class="container"></div>
       <div class="row justify-content-center">
-        <div class="col-sm-6 justify-content-center mt-5">
+        <div class="col-sm-6 justify-content-center mt-5 team-content">
           <img
             src="images/Jane-Doe.jpg"
             class="img-fluid rounded d-sm-block mb-3"
             alt="Jane Doe"
           />
           <h4>Jane Doe</h4>
-          <p class="team-text">
+          <p class="team-text mb-4 mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quibusdam.
-          </p>
-          <div class="d-flex m-4 justify-content-evenly">
-            <i class="fab fa-instagram contact-icon"></i>
-            <i class="fab fa-facebook contact-icon"></i>
-            <i class="fab fa-twitter contact-icon"></i>
-          </div>
-        </div>
-        <div class="col-sm-6 justify-content-center mt-5">
+          </p>    
+            <div class="d-flex justify-content-center">
+              <i class="fab fa-instagram contact-icon"></i>
+              <i class="fab fa-facebook contact-icon"></i>
+              <i class="fab fa-twitter contact-icon"></i>
+            </div>       
+            </div>
+          <div class="col-sm-6 justify-content-center mt-5 team-content">
           <img
             src="images/SunnyDay.jpg"
             class="img-fluid rounded d-sm-block mb-3"
             alt="Sunny Day"
           />
           <h4>Sunny Day</h4>
-          <p class="team-text">
+          <p class="team-text mb-4 mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia.
-          </p>
-          <div class="d-flex justify-content-evenly m-4">
-            <i class="fab fa-instagram contact-icon"></i>
-            <i class="fab fa-facebook contact-icon"></i>
-            <i class="fab fa-twitter contact-icon"></i>
-          </div>
+            quibusdam.
+          </p>    
+            <div class="d-flex justify-content-center">
+              <i class="fab fa-instagram contact-icon"></i>
+              <i class="fab fa-facebook contact-icon"></i>
+              <i class="fab fa-twitter contact-icon"></i>
+            </div>       
+            </div>
         </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-sm-6 justify-content-center mt-5">
+        <div class="row justify-content-center">
+          <div class="col-sm-6 justify-content-center mt-5 team-content">
           <img
             src="images/Alice Smith.jpg"
             class="img-fluid rounded d-sm-block mb-3"
             alt="Alice Smith"
           />
           <h4>Alice Smith</h4>
-          <p class="team-text">
+          <p class="team-text mb-4 mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quibusdam.
-          </p>
-          <div class="d-flex justify-content-evenly m-4">
-            <i class="fab fa-instagram contact-icon"></i>
-            <i class="fab fa-facebook contact-icon"></i>
-            <i class="fab fa-twitter contact-icon"></i>
-          </div>
-        </div>
-        <div class="col-sm-6 justify-content-center mt-5">
+          </p>    
+            <div class="d-flex justify-content-center">
+              <i class="fab fa-instagram contact-icon"></i>
+              <i class="fab fa-facebook contact-icon"></i>
+              <i class="fab fa-twitter contact-icon"></i>
+            </div>       
+            </div>
+          <div class="col-sm-6 justify-content-center mt-5 team-content">
           <img
             src="images/Joe Rodrigez.jpg"
             class="img-fluid rounded d-sm-block mb-3"
             alt="Joe Rodrigez"
           />
           <h4>Joe Rodrigez</h4>
-          <p class="team-text">
+          <p class="team-text mb-4 mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia.
-          </p>
-          <div class="d-flex justify-content-evenly m-4">
-            <i class="fab fa-instagram contact-icon"></i>
-            <i class="fab fa-facebook contact-icon"></i>
-            <i class="fab fa-twitter contact-icon"></i>
-          </div>
+            quibusdam.
+          </p>    
+            <div class="d-flex justify-content-center">
+              <i class="fab fa-instagram contact-icon"></i>
+              <i class="fab fa-facebook contact-icon"></i>
+              <i class="fab fa-twitter contact-icon"></i>
+            </div>       
+            </div>
         </div>
       </div>
-    </div>
-    <div class="source-links text-center">
+      <div class="source-links text-center">
         Netlify link at
         <a
           href="https://affectionate-feynman-459bba.netlify.app/"
@@ -178,7 +178,6 @@
           >Github</a
         >
       </div>
-   
     </div>
   </body>
 </html>
