Add contact page

--- a/contact.html
+++ b/contact.html
@@ -85,52 +85,32 @@
             </div>
           </nav>
         </div>
-     </div>
-    <h2>Welcome to Jane's Online Campaign</h2>
-    <br />
-
-    <div class="container">
-      <div class="row justify-content-left m-2">
-        <div class="col-sm-8">
-          <img
-            src="images/candidate.jpg"
-            alt="candidate image"
-            class="img-fluid rounded"
-          />
-        </div>
-        <div class="col-sm-4 action-link-wrapper">
-          <div class="row  action-link-row">
-            <a href="#" class="action-link home">Donate</a>
-          </div>        
-          <div class="row action-link-row">
-            <a href="#" class="action-link home">Volunteer</a>
-          </div>         
-          <div class="row action-link-row">
-            <a href="contact.html" class="action-link home">Contact</a>
-          </div>
-        </div>
-        <div class="homepage-content">
-          <div class="row m-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-            <br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </div>
-        </div>
       </div>
-      <div class="contact p-2">
-        <h5>Connect with Us</h5>
-        <i class="fab fa-instagram contact-icon"></i>
-        <i class="fab fa-facebook contact-icon"></i>
-        <i class="fab fa-twitter contact-icon"></i>
+      <h2>Contact Us</h2>
+      <div class="contact m-5">
+        <h3>Email:</h3>
+        <p>
+          <a href="mailto:janedoe@gmail.com">janedoeforlocaloffice@gmail.com</a>
+        </p>
+        <h3>Twitter:</h3>
+        <p>
+          <a
+            href="https://www.twitter.com/janedoeforlocaloffice"
+            target="_blank"
+            >@Jane-Doe</a
+          >
+        </p>
+        <h3>Instagram:</h3>
+        <p>
+          <a
+            href="https://www.instagram.com/janedoeforlocaloffice"
+            target="_blank"
+            >@Jane-Doe.wins</a
+          >
+        </p>
       </div>
 
-      <div class="source-links">
+      <div class="source-links m-5">
         Netlify link at
         <a
           href="https://affectionate-feynman-459bba.netlify.app/"
