Fix labels and small screen font size

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
       src="https://kit.fontawesome.com/9591399bbb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Jane Doe for local office - homepage</title>
+    <title>Jane Doe for local office - Contact</title>
   </head>
 
   <body>
     <div class="container">
       <div class="hero fixed-top pt-3">
-        <h1>Jane Doe's Homepage</h1>
+        <h1>Jane Doe's Contact Page</h1>
         <h3>Jane Doe - Your Rep for Local City Council</h3>
         <div class="navbar-wrapper">
           <nav class="navbar navbar-expand-lg navbar-light mt-4">
@@ -89,11 +89,11 @@
       <h2>Contact Us</h2>
       <div class="contact m-5">
         <h3>Email:</h3>
-        <p>
+        <p class="contact-link">
           <a href="mailto:janedoe@gmail.com">janedoeforlocaloffice@gmail.com</a>
         </p>
         <h3>Twitter:</h3>
-        <p>
+        <p class="contact-link">
           <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
@@ -101,7 +101,7 @@
           >
         </p>
         <h3>Instagram:</h3>
-        <p>
+        <p class="contact-link">
           <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
