Show active link and link contact page to events

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
           <a class="nav-link mx-5 px-5 alt-nav-link" aria-current="page" href="index.html" title="Jane Doe's homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-5 px-5 " href="blog.html" title="Jane Doe's blogs">Blogs</a>
+          <a class="nav-link mx-5 px-5 active" href="blog.html" title="Jane Doe's blogs">Blogs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-5 px-5 alt-nav-link" href="team.html" title="Jane Doe's campaign team">Team</a>
