--- a/events.html
+++ b/events.html
@@ -74,7 +74,7 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link mx-5 px-5"
+                      class="nav-link mx-5 px-5 active"
                       href="events.html"
                       title="Jane Does' upcoming events"
                       >Events</a
@@ -104,7 +104,7 @@
               <a href="#" class="action-link">Volunteer</a>
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link mb-1">Contact Us</a>
+              <a href="contact.html" class="action-link mb-1">Contact Us</a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               <a href="#" class="action-link">Volunteer</a>
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link mb-1">Contact Us</a>
+              <a href="contact.html" class="action-link mb-1">Contact Us</a>
             </div>
           </div>
           <div class="col-7 justify-content-left">
@@ -142,7 +142,7 @@
               <a href="#" class="action-link">Volunteer</a>
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link mb-1">Contact Us</a>
+              <a href="contact.html" class="action-link mb-1">Contact Us</a>
             </div>
           </div>
         </div>
