--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link mx-5 px-5 alt-nav-link"
+                      class="nav-link mx-5 px-5 alt-nav-link active"
                       aria-current="page"
                       href="index.html"
                       title="Jane Doe's homepage"
