--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link mx-5 px-5 alt-nav-link"
+                      class="nav-link mx-5 px-5 alt-nav-link active"
                       href="team.html"
                       title="Jane Doe's campaign team"
                       >Team</a
@@ -74,7 +74,7 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link mx-5 px-5"
+                      class="nav-link mx-5 px-5 active"
                       href="events.html"
                       title="Jane Does' upcoming events"
                       >Events</a
