Add active social media links

--- a/index.html
+++ b/index.html
@@ -125,31 +125,42 @@
       </div>
       <div class="contact p-2">
         <h5>Connect with Us</h5>
-        <i class="fab fa-instagram contact-icon"></i>
-        <i class="fab fa-facebook contact-icon"></i>
-        <i class="fab fa-twitter contact-icon"></i>
+        <a
+            href="https://www.instagram.com/janedoeforlocaloffice"
+            target="_blank"
+            >
+        <i class="fab fa-instagram contact-icon"></i></a>
+        <a
+            href="https://www.facebook.com/janedoeforlocaloffice"
+            target="_blank"
+            >
+        <i class="fab fa-facebook contact-icon"></i></a>
+        <a
+            href="https://www.twitter.com/janedoeforlocaloffice"
+            target="_blank"
+            >
+        <i class="fab fa-twitter contact-icon"></i></a>
       </div>
 
       <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="email-link">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
           href="https://github.com/NiliPilipp/Candidate-Website"
           title="Source on Github"
-          target="_blank"
-          ><i class="fab fa-github"></i></a
+          target="_blank"         
+          ><i class="fab fa-github source-icon m-1" ></i></a
         >
         </div>
         <div>View served page at
         <a
           href="https://affectionate-feynman-459bba.netlify.app/"
           title="Link to Netlify"
-          target="_blank"
-          
-          ><img src="images/netlify.png" width="18px"
-          height="18px"
+          target="_blank"          
+          ><img src="images/netlify.png" class="source-icon" width="40px"
+          height="40px"
          ></a
         >
         </div>        
