--- a/contact.html
+++ b/contact.html
@@ -110,23 +110,34 @@
         </p>
       </div>
 
-      <div class="source-links m-5">
-        Netlify link at
-        <a
-          href="https://affectionate-feynman-459bba.netlify.app/"
-          title="Link to Netlify"
-          target="_blank"
-          >Netlify</a
+      <footer class="source-links">
+        Contact me:
+        <a href="mailto:nili.philipp@gmail.com" class="email-link"
+          >Nili.Philipp@gmail.com</a
         >
-
-        Github link at
-        <a
-          href="https://github.com/NiliPilipp/Candidate-Website"
-          title="Link to Github"
-          target="_blank"
-          >Github</a
-        >
-      </div>
+        <div>
+          View source at
+          <a
+            href="https://github.com/NiliPilipp/Candidate-Website"
+            title="Source on Github"
+            target="_blank"
+            ><i class="fab fa-github source-icon m-1"></i
+          ></a>
+        </div>
+        <div>
+          View served page at
+          <a
+            href="https://affectionate-feynman-459bba.netlify.app/"
+            title="Link to Netlify"
+            target="_blank"
+            ><img
+              src="images/netlify.png"
+              class="source-icon"
+              width="40px"
+              height="40px"
+          /></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
