format contact links

--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
         <div class="d-flex justify-content-evenly">
           <a href="#" class="action-link blog">Donate</a>               
           <a href="#" class="action-link blog">Volunteer</a>           
-          <a href="#" class="action-link blog">Contact</a>
+          <a href="contact.html" class="action-link blog">Contact</a>
           </div>
         </div>
         
@@ -110,7 +110,7 @@
       </div>
    <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com" class="email-link">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
