--- a/contact.html
+++ b/contact.html
@@ -89,22 +89,26 @@
       <h2>Contact Us</h2>
       <div class="contact m-5">
         <h3>Email:</h3>
-        <p class="contact-link">
-          <a href="mailto:janedoe@gmail.com">janedoeforlocaloffice@gmail.com</a>
+        <p>
+          <a href="mailto:janedoe@gmail.com" class="contact-link"
+            >janedoeforlocaloffice@gmail.com</a
+          >
         </p>
         <h3>Twitter:</h3>
-        <p class="contact-link">
+        <p>
           <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            class="contact-link"
             >@Jane-Doe</a
           >
         </p>
         <h3>Instagram:</h3>
-        <p class="contact-link">
+        <p>
           <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            class="contact-link"
             >@Jane-Doe.wins</a
           >
         </p>
