--- a/events.html
+++ b/events.html
@@ -167,7 +167,7 @@
       </div>
       <footer class="source-links">
         Contact me:
-        <a href="mailto:nili.philipp@gmail.com" class="email-link"
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link"
           >Nili.Philipp@gmail.com</a
         >
         <div>
