--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com" class="email-link">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
