--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/9591399bbb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Jane Doe for local office - Contact</title>
+    <title>Jane Doe contact page</title>
   </head>
 
   <body>
