--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Jane Doe is an engineer running for city council of Fairtown USA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -94,19 +95,19 @@
         <div class="col-sm-8">
           <img
             src="images/candidate.jpg"
-            alt="candidate image"
+            alt="Jane Doe image"
             class="img-fluid rounded"
           />
         </div>
         <div class="col-sm-4 action-link-wrapper">
           <div class="row  action-link-row">
-            <a href="#" class="action-link home">Donate</a>
+            <a href="#" class="action-link home" title="Donations for Jane Doe's campaign">Donate</a>
           </div>        
           <div class="row action-link-row">
-            <a href="#" class="action-link home">Volunteer</a>
+            <a href="#" class="action-link home" title="volunteer for Jane Doe's campaign">Volunteer</a>
           </div>         
           <div class="row action-link-row">
-            <a href="contact.html" class="action-link home">Contact</a>
+            <a href="contact.html" class="action-link home" title="contact Jane Doe's campaign">Contact</a>
           </div>
         </div>
         <div class="homepage-content">
@@ -128,29 +129,32 @@
         <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on twitter"
             >
         <i class="fab fa-twitter contact-icon"></i></a>
       </div>
 
       <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com" class="contact-link">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link" title="email Nili">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
           href="https://github.com/NiliPilipp/Candidate-Website"
           title="Source on Github"
-          target="_blank"         
+          target="_blank"               
           ><i class="fab fa-github source-icon m-1" ></i></a
         >
         </div>
