--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Jane Doe's campaing team" />   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -104,16 +105,19 @@
               <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on twitter"
             >
         <i class="fab fa-twitter contact-icon"></i></a>
             </div>       
@@ -133,16 +137,19 @@
                <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Sunny Day on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Sunny Day on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            title="Sunny Day on twitter"
             >
         <i class="fab fa-twitter contact-icon"></i></a>
             </div>       
@@ -154,6 +161,7 @@
             src="images/Alice Smith.jpg"
             alt="Alice Smith"
             class="img-fluid rounded d-sm-block mb-3"
+
           />
           <h4>Alice Smith</h4>
           <p class="team-text mb-4 mt-3">
@@ -164,16 +172,19 @@
                <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Alice Smith on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Alice Smith on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            title="Alice Smith on twitter"
             >
         <i class="fab fa-twitter contact-icon"></i></a>
             </div>       
@@ -193,16 +204,19 @@
               <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Joe Rodrigez on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Joe Rodrigez on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
+            title="Joe Rodrigez on twitter"
             >
         <i class="fab fa-twitter contact-icon"></i></a>
             </div>       
@@ -211,7 +225,7 @@
       </div>
        <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com" class="contact-link">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link" title="email Nili">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
