--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Jane Doe's ideas for Fairtown USA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -20,7 +21,7 @@
       src="https://kit.fontawesome.com/9591399bbb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Jane Doe's blog page</title>
+    <title>Jane Doe's blog</title>
   </head>
 
 <body>
@@ -38,7 +39,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link mx-5 px-5 alt-nav-link" aria-current="page" href="index.html" title="Jane Doe's homepage">Home</a>
+          <a class="nav-link mx-5 px-5 alt-nav-link" aria-current="page" href="index.html" title="Jane Doe's homepage"  title="Jane Doe's homepage">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-5 px-5 active" href="blog.html" title="Jane Doe's blogs">Blogs</a>
@@ -84,9 +85,9 @@
         </div>
         <div class="row mt-2">
         <div class="d-flex justify-content-evenly">
-          <a href="#" class="action-link blog">Donate</a>               
-          <a href="#" class="action-link blog">Volunteer</a>           
-          <a href="contact.html" class="action-link blog">Contact</a>
+          <a href="#" class="action-link blog" title="Donations for Jane Doe's campaign">Donate</a>               
+          <a href="#" class="action-link blog" title="volunteer for Jane Doe's campaign">Volunteer</a>           
+          <a href="contact.html" class="action-link blog" title="contact Jane Doe's campaign">Contact</a>
           </div>
         </div>
         
@@ -95,22 +96,24 @@
        <a
             href="https://www.instagram.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on instagram"
             >
         <i class="fab fa-instagram contact-icon"></i></a>
         <a
             href="https://www.facebook.com/janedoeforlocaloffice"
             target="_blank"
+            title="Jane Doe on facebook"
             >
         <i class="fab fa-facebook contact-icon"></i></a>
         <a
             href="https://www.twitter.com/janedoeforlocaloffice"
             target="_blank"
             >
-        <i class="fab fa-twitter contact-icon"></i></a>
+        <i class="fab fa-twitter contact-icon"  title="Jane Doe on twitter"></i></a>
       </div>
    <footer class="source-links">
         Contact me: 
-        <a href="mailto:nili.philipp@gmail.com" class="contact-link">Nili.Philipp@gmail.com</a>
+        <a href="mailto:nili.philipp@gmail.com" class="contact-link" class="email Nili">Nili.Philipp@gmail.com</a>
         <div>
         View source at
         <a
