--- a/events.html
+++ b/events.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Upcoming events for Jane Doe's campaign"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -98,26 +102,50 @@
           </div>
           <div class="col-5">
             <div class="row m-3">
-              <a href="#" class="action-link mt-1">Sign Up</a>
+              <a
+                href="#"
+                class="action-link mt-1"
+                title="sign up for Aug 30 event"
+                >Sign Up</a
+              >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link">Volunteer</a>
+              <a href="#" class="action-link" title="Volunteer for Aug 30 event"
+                >Volunteer</a
+              >
             </div>
             <div class="row m-3">
-              <a href="contact.html" class="action-link mb-1">Contact Us</a>
+              <a
+                href="contact.html"
+                class="action-link mb-1"
+                title="contact for Aug 30 event"
+                >Contact Us</a
+              >
             </div>
           </div>
         </div>
         <div class="row mt-5 event">
           <div class="col-5">
             <div class="row m-3">
-              <a href="#" class="action-link mt-1">Sign Up</a>
+              <a
+                href="#"
+                class="action-link mt-1"
+                title="sign up for Sep 7 event"
+                >Sign Up</a
+              >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link">Volunteer</a>
+              <a href="#" class="action-link" title="volunteer for Sep 7 event"
+                >Volunteer</a
+              >
             </div>
             <div class="row m-3">
-              <a href="contact.html" class="action-link mb-1">Contact Us</a>
+              <a
+                href="contact.html"
+                class="action-link mb-1"
+                title="contact for Sept 7 event"
+                >Contact Us</a
+              >
             </div>
           </div>
           <div class="col-7 justify-content-left">
@@ -136,13 +164,25 @@
           </div>
           <div class="col-5">
             <div class="row m-3">
-              <a href="#" class="action-link mt-1">Sign Up</a>
+              <a
+                href="#"
+                class="action-link mt-1"
+                title="sign up for Sept 14 event"
+                >Sign Up</a
+              >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link">Volunteer</a>
+              <a href="#" class="action-link" title="volunteer for Sep 14 event"
+                >Volunteer</a
+              >
             </div>
             <div class="row m-3">
-              <a href="contact.html" class="action-link mb-1">Contact Us</a>
+              <a
+                href="contact.html"
+                class="action-link mb-1"
+                title="contact for Sept 14 event"
+                >Contact Us</a
+              >
             </div>
           </div>
         </div>
@@ -152,16 +192,22 @@
         <a
           href="https://www.instagram.com/janedoeforlocaloffice"
           target="_blank"
+          title="Jane Doe on instagram"
         >
           <i class="fab fa-instagram contact-icon"></i
         ></a>
         <a
           href="https://www.facebook.com/janedoeforlocaloffice"
           target="_blank"
+          title="Jane Doe on facebook"
         >
           <i class="fab fa-facebook contact-icon"></i
         ></a>
-        <a href="https://www.twitter.com/janedoeforlocaloffice" target="_blank">
+        <a
+          href="https://www.twitter.com/janedoeforlocaloffice"
+          target="_blank"
+          title="Jane Doe on twitter"
+        >
           <i class="fab fa-twitter contact-icon"></i
         ></a>
       </div>
