Fix event action buttons for xs viewport

--- a/events.html
+++ b/events.html
@@ -94,30 +94,33 @@
 
       <div class="container">
         <div class="row mt-5 event">
-          <div class="col-7 justify-content-left">
+          <div class="col-6 justify-content-left">
             <h3 class="mt-2">Aug 30, 2021</h3>
             <h5>7:30PM</h5>
             <h1>Meet & Greet</h1>
             <h5>Gold Rock Cafe</h5>
           </div>
-          <div class="col-5">
+          <div class="col-6">
             <div class="row m-3">
               <a
                 href="#"
-                class="action-link mt-1"
+                class="action-link events mt-1"
                 title="sign up for Aug 30 event"
                 >Sign Up</a
               >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link" title="Volunteer for Aug 30 event"
+              <a
+                href="#"
+                class="action-link events"
+                title="Volunteer for Aug 30 event"
                 >Volunteer</a
               >
             </div>
             <div class="row m-3">
               <a
                 href="contact.html"
-                class="action-link mb-1"
+                class="action-link events mb-1"
                 title="contact for Aug 30 event"
                 >Contact Us</a
               >
@@ -125,30 +128,33 @@
           </div>
         </div>
         <div class="row mt-5 event">
-          <div class="col-5">
+          <div class="col-6">
             <div class="row m-3">
               <a
                 href="#"
-                class="action-link mt-1"
+                class="action-link events mt-1"
                 title="sign up for Sep 7 event"
                 >Sign Up</a
               >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link" title="volunteer for Sep 7 event"
+              <a
+                href="#"
+                class="action-link events"
+                title="volunteer for Sep 7 event"
                 >Volunteer</a
               >
             </div>
             <div class="row m-3">
               <a
                 href="contact.html"
-                class="action-link mb-1"
+                class="action-link events mb-1"
                 title="contact for Sept 7 event"
                 >Contact Us</a
               >
             </div>
           </div>
-          <div class="col-7 justify-content-left">
+          <div class="col-6 justify-content-left">
             <h3 class="mt-2">Sept 7, 2021</h3>
             <h5>7:30PM</h5>
             <h1>Meet & Greet</h1>
@@ -156,30 +162,33 @@
           </div>
         </div>
         <div class="row mt-5 event">
-          <div class="col-7 justify-content-left">
+          <div class="col-6 justify-content-left">
             <h3 class="mt-2">Sept 14, 2021</h3>
             <h5>7:30PM</h5>
             <h1>Meet & Greet</h1>
             <h5>Gold Rock Cafe</h5>
           </div>
-          <div class="col-5">
+          <div class="col-6">
             <div class="row m-3">
               <a
                 href="#"
-                class="action-link mt-1"
+                class="action-link events mt-1"
                 title="sign up for Sept 14 event"
                 >Sign Up</a
               >
             </div>
             <div class="row m-3">
-              <a href="#" class="action-link" title="volunteer for Sep 14 event"
+              <a
+                href="#"
+                class="action-link events"
+                title="volunteer for Sep 14 event"
                 >Volunteer</a
               >
             </div>
             <div class="row m-3">
               <a
                 href="contact.html"
-                class="action-link mb-1"
+                class="action-link events mb-1"
                 title="contact for Sept 14 event"
                 >Contact Us</a
               >
